dnl Process this file with autoconf to produce a configure script.
dnl Adapted from the nice scripts from RoX
AC_INIT(xscreensaver-pwcheck.c)

dnl Checks for programs.
AC_PROG_CC

[
if test "x$GCC" = "xyes"; then
  CFLAGS="$CFLAGS -Wall -Wextra -Werror \
	-Wstrict-prototypes -Wmissing-prototypes \
	-Wcast-qual -Wcast-align -Wpointer-arith \
	-Wwrite-strings -Wconversion \
	-Wnested-externs"
fi
]

AC_DEFUN(CLIP_REQUIRE, [
AC_MSG_CHECKING(that $1 (version >= $2) is installed)
if "$PKG_CONFIG" --atleast-version=$2 $1 ; then
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
  if "$PKG_CONFIG" --exists $1 ; then
    AC_MSG_ERROR(Current version is only `"$PKG_CONFIG" "$1" --modversion`)
  else
    AC_MSG_ERROR(Package is not installed)
  fi
fi
])

dnl Check for default socket
AC_ARG_WITH(pwcheckd-socket,
	AC_HELP_STRING([--with-pwcheckd-socket=<path>],
		[use <path> as default pwcheckd socket path (default: /var/run/pwchekd)]),
		[PWCHECKD_SOCKET=$withval],
		[PWCHECKD_SOCKET=/var/run/pwcheckd])
AC_SUBST(PWCHECKD_SOCKET)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/socket.h sys/un.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

AC_OUTPUT(Makefile)
